complete gameplay menus quests and remaining features